# website_blocker_python

./: LICENSE  README.md  pyproject.toml  requirements.txt
website_blocker_python/: Controller.py  DAO.py  Model.py  SitesDAO.py  View.py  info.txt  selfcontrol.py  sites.txt
website_blocker_python/dados/: sites.txt
