[tool.poetry]
name = "website-blocker-python"
version = "0.1.0"
description = ""
authors = ["arturj <arturjardel9@gmail.com>"]
readme = "README.md"
packages = [{include = "website_blocker_python"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tinydb = "^4.8.0"
pyside6 = "^6.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
